# TxRace

./: INSTALL  README.md  USAGE  prepare.sh  sourceme.sh
lbrtools/: Makefile  explbr.cpp  process_txlbr.pl  process_txlbr.sh
neongoby/: Makefile  Makefile.common  Makefile.common.in  configure
neongoby/eval/: cloc.py
neongoby/include/dyn-aa/: Passes.h  Utils.h
neongoby/lib/Checkers/: CallGraphChecker.cpp
neongoby/lib/Instrumenters/: TxInstrumenter.cpp
neongoby/lib/Utils/: Utils.cpp
neongoby/runtime/: Makefile
neongoby/runtime/TxHooks/: Makefile  TxHooks.cpp
neongoby/runtime/TxHooks/donot-rt/: Makefile  donot-rt.cpp
neongoby/runtime/TxHooks/prof-rt/: Makefile  prof-rt.cpp
neongoby/runtime/TxHooks/tsan-compiler-rt/: CMakeLists.txt  Makefile
neongoby/runtime/TxHooks/tsan-compiler-rt/rtl/: Makefile  tsan.syms.extra  tsan_fd.cc  tsan_interface.h
neongoby/runtime/TxHooks/tsan-compiler-rt/rtl/interception/: CMakeLists.txt  Makefile
neongoby/runtime/TxHooks/tsan-compiler-rt/rtl/sanitizer_common/: CMakeLists.txt  Makefile  sanitizer_posix.cc
neongoby/submodules/rcs/: Makefile.common  config.status
neongoby/submodules/rcs/include/rcs/: FPCallGraph.h  IDAssigner.h  IDManager.h  InterReach.h  MBB.h  PointerAnalysis.h  config.h  typedefs.h  util.h
neongoby/submodules/rcs/lib/AATester/: AATester.cpp
neongoby/submodules/rcs/lib/Andersens/: Andersens.cpp
neongoby/submodules/rcs/lib/CFG/: CallGraphDrawer.cpp  Exec.cpp  ExecOnce.cpp  FPCallGraph.cpp  InterReach.cpp
neongoby/submodules/rcs/lib/ID/: IDLookUp.cpp  IDTagger.cpp  ValueRenaming.cpp
neongoby/submodules/rcs/lib/Misc/: AdvancedInstCounter.cpp  FunctionLister.cpp  MallocReplacer.cpp  SSAUpdaterTester.cpp  ValuePrinter.cpp
neongoby/submodules/rcs/lib/SourceLocator/: SourceLocator.cpp
pintools/tx_prof/: Makefile  run.sh  tx_prof.cpp
toolchain/: build.sh
